DFfullcopybackup/force-app/main/default/objects/Order_Error_Queue__c/Order_Error_Queue__c.object-meta.xml
<CustomObject>
    <label>Order Error Queue</label>
    <nameField>
        <displayFormat>OEQ-{00000}</displayFormat>
        <label>Order Error Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Error Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>