DFfullcopybackup/force-app/main/default/objects/Order_Error_Queue__c/fields/APTSOrder__c.field-meta.xml
<CustomField>
    <fullName>APTSOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Order Error Queue</relationshipLabel>
    <relationshipName>Order_Error_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>