DFfullcopybackup/force-app/main/default/objects/Order_Error_Queue__c/fields/Last_Retry__c.field-meta.xml
<CustomField>
    <fullName>Last_Retry__c</fullName>
    <label>Last Retry</label>
    <type>DateTime</type>
</CustomField>