DFfullcopybackup/force-app/main/default/objects/Order_Error_Queue__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Error Queue</relationshipLabel>
    <relationshipName>Order_Error_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>