DFfullcopybackup/force-app/main/default/objects/Order_Error_Queue__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <formula>&apos;O-&apos; + Order__r.OrderNumber</formula>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>